<resources>
    <string name="app_name">ElecCart</string>
    <string name="eleccart">ElecCart</string>
    <string name="tv_subtitle_onboard">We Provide The Best\nElectronic Product From Great Brands</string>
    <string name="tv_subtitle_onboard_2">You will be able to find a wide selection\nof electrics from top brands</string>
    <string name="create_account">Create Account</string>
    <string name="create_an_account_so_you_can_explore_all_the_electronic_products">Create an account so you can explore all the\nelectronic products</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="login_here">Login here</string>
    <string name="welcome_back_you_ve_been_missed">Welcome back you\'ve been missed!</string>
    <string name="create_new_account">Create new account</string>
    <string name="sign_in">Sign in</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="wishlist">Wishlist</string>
    <string name="price_format">$%1$.2f</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_here">Search here...</string>
    <string name="recent_added">Recent Added</string>
    <string name="list_products">List Products</string>
    <string name="description_fill_detail_product">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="details_product">Details Product</string>
    <string name="apple_airpods_max">Apple Airpods Max</string>
    <string name="_199_99">$199,99</string>
    <string name="description_of_product">Description of product</string>
    <string name="type_product_wishlist">Model: WH-1000XM4, Black</string>
    <string name="checkout">Checkout</string>
    <string name="cart_is_empty">Cart is empty</string>
    <string name="payment_now">Payment Now</string>
    <string name="_3_items">3 items</string>
    <string name="total_items">Total Items</string>
    <string name="total">Total</string>
    <string name="order_summary">Order Summary</string>
    <string name="my_cart">My Cart</string>
    <string name="quantity">Quantity:</string>
    <string name="phone_number">Phone</string>
    <string name="default_name">Azizah Fathimatuzzahro</string>
    <string name="default_email">afathimatuzzahro@gmail.com</string>
    <string name="default_phone">08123456789</string>
    <string name="add_address">Add Address</string>
    <string name="full_name">Full Name</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="no_address_found">No Address Found</string>
    <string name="no_address_selected">No Address Selected</string>
    <string name="choose_address">Choose Address</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="my_orders">My Orders</string>
    <string name="please_enter_your_email_password_to_sign_in"><![CDATA[Please enter your email & password to Sign In]]></string>
    <string name="your_wishlist_is_empty">Your Wishlist is Empty!</string>
    <string name="search_product_here">Search Product Here</string>
    <string name="my_orders_detail">My Orders Detail</string>
    <string name="welcome_to_eleccart">Welcome to ElecCart!</string>
    <string name="all">All</string>
    <string name="tv">TV</string>
    <string name="audio">Audio</string>
    <string name="smartphone">Smartphone</string>
    <string name="gaming">Gaming</string>
    <string name="appliance">Appliance</string>
    <string name="continue_payment">Continue</string>
    <string name="order_completed">Order Completed</string>
    <string name="order_id">Order ID:</string>
    <string name="status_payment">Status Payment:</string>
    <string name="paid_unpaid">Paid/Unpaid</string>
    <string name="product_detail">Product Detail</string>
    <string name="total_price">Total Price:</string>
    <string name="confirm_address">Confirm Address</string>
    <string name="address">Address</string>
    <string name="full_address">Full Address</string>
    <string name="province">Province</string>
    <string name="postal_code">Postal Code</string>
    <string name="save">Save</string>
    <string name="please_wait_be_patient">Please wait, be patient....</string>
    <string name="detail_profile">Detail Profile</string>
    <string name="get_started">Get Started</string>
    <string name="category">Category</string>
    <string name="products_is_empty">Products is empty</string>
    <string name="logout">Logout</string>
    <string name="no_data_wishlist">When you add products to Wishlist, they\'ll appear here</string>
    <string name="product_cart">Apple Airpods Max</string>
    <string name="price_product_cart">$199,99</string>
    <string name="title_product">Product Title Here</string>
    <string name="price_product">$199.99</string>
    <string name="id_order_transaction">ID Order</string>
    <string name="status_transaction">Status</string>
    <string name="total_price_transaction">Total Price:</string>
    <string name="number_total_transaction">000</string>
    <string name="amount_product_wishlist">$349.99</string>
    <string name="product_wishlist">Apple Airpods Max</string>
    <string name="time_payment">Time Payment</string>
    <string name="_00_00">00:00</string>
</resources>