<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".presentation.view.detailproduct.DetailProductActivity">

    <ImageView
        android:id="@+id/iv_left_arrow_detail_product"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/left_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_detail_product"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins"
        android:text="@string/details_product"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_left_arrow_detail_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_left_arrow_detail_product"
        app:layout_constraintTop_toTopOf="@id/iv_left_arrow_detail_product" />

    <ImageView
        android:id="@+id/iv_share_detail_product"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="14dp"
        android:src="@drawable/share"
        app:layout_constraintStart_toEndOf="@id/tv_title_detail_product"
        app:layout_constraintTop_toTopOf="@id/tv_title_detail_product"
        app:layout_constraintBottom_toBottomOf="@id/tv_title_detail_product"
        app:layout_constraintEnd_toEndOf="parent" />


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_detail_product">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_detail_product"
                android:layout_width="390dp"
                android:layout_height="286dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/airpodsmax"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintDimensionRatio="H,1:1"/>

            <TextView
                android:id="@+id/tv_title_name_product_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="60dp"
                android:fontFamily="@font/poppins_medium"
                android:maxLines="2"
                android:ellipsize="end"
                android:text="@string/apple_airpods_max"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_detail_product" />

            <TextView
                android:id="@+id/tv_price_product_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins"
                android:text="@string/_199_99"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_name_product_detail" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_wishlist_detail_product"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp"
                app:layout_constraintBottom_toBottomOf="@id/tv_title_name_product_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_title_name_product_detail"
                app:layout_constraintStart_toEndOf="@id/tv_title_name_product_detail">

                <ImageView
                    android:id="@+id/wishlist_detail_product"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/wishlist" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tv_title_description_detail_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/description_of_product"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_price_product_detail" />

            <TextView
                android:id="@+id/tv_description_fill_detail_product"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins"
                android:text="@string/description_fill_detail_product"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_description_detail_product"
                app:layout_constraintVertical_bias="0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_to_cart_detail_product"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/color_secondary"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/add_to_cart"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toStartOf="@+id/btn_buy_now_detail_product"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_description_fill_detail_product" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_buy_now_detail_product"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/grey"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/buy_now"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_add_to_cart_detail_product"
                app:layout_constraintTop_toBottomOf="@id/tv_description_fill_detail_product" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>