<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/color_primary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnboardActivity">

    <ImageView
        android:id="@+id/iv_onboard"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/elec_cart"
        android:layout_marginStart="74dp"
        android:layout_marginTop="290dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_onboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/eleccart"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:layout_marginStart="18dp"
        app:layout_constraintStart_toEndOf="@+id/iv_onboard"
        app:layout_constraintTop_toTopOf="@id/iv_onboard"
        app:layout_constraintBottom_toBottomOf="@id/iv_onboard"/>

    <TextView
        android:id="@+id/tv_subtitle_onboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/poppins_bold"
        android:lineHeight="24dp"
        android:text="@string/tv_subtitle_onboard"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_onboard" />

    <TextView
        android:id="@+id/tv_subtitle_onboard_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/tv_subtitle_onboard_2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_subtitle_onboard"
        app:layout_constraintStart_toStartOf="@+id/tv_subtitle_onboard"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle_onboard" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_get_started_onboard"
        android:layout_width="200dp"
        android:layout_height="44dp"
        android:layout_marginStart="80dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_semibold"
        android:text="Get Started"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        android:layout_marginTop="183dp"
        android:layout_marginEnd="56dp"
        app:layout_constraintEnd_toEndOf="@id/tv_subtitle_onboard_2"
        app:layout_constraintStart_toStartOf="@+id/tv_subtitle_onboard_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle_onboard_2" />



</androidx.constraintlayout.widget.ConstraintLayout>