<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tv_title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="Welcome"
        android:textColor="@color/color_primary"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_subtitle_signin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:lineSpacingExtra="4dp"
        android:text="@string/please_enter_your_email_password_to_sign_in"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tv_title_login"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_login" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle_signin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email_signup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_signin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/color_primary"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sign_in"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/til_password_signup"
        app:layout_constraintStart_toStartOf="@+id/til_password_signup"
        app:layout_constraintTop_toBottomOf="@+id/til_password_signup" />

    <LinearLayout
        android:id="@+id/linear_layout_or_signin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_signin"
        app:layout_constraintStart_toStartOf="@+id/btn_signin"
        app:layout_constraintTop_toBottomOf="@+id/btn_signin">

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="2"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:text="or"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="2"
            android:background="@android:color/darker_gray" />

    </LinearLayout>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_google_login"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="8dp"
        app:strokeColor="@color/color_secondary"
        app:layout_constraintEnd_toEndOf="@+id/linear_layout_or_signin"
        app:layout_constraintStart_toStartOf="@+id/linear_layout_or_signin"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_or_signin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_google_signin"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="28dp"
                android:src="@drawable/google"
                app:layout_constraintBottom_toBottomOf="@+id/tv_sign_in_with_google"
                app:layout_constraintEnd_toStartOf="@+id/tv_sign_in_with_google"
                app:layout_constraintTop_toTopOf="@+id/tv_sign_in_with_google" />

            <TextView
                android:id="@+id/tv_sign_in_with_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/sign_in_with_google"
                android:textColor="@color/grey_300"
                android:textSize="20sp"
                android:layout_marginEnd="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>